--- a/todoapp/views/mark_done.erb
+++ b/todoapp/views/mark_done.erb
@@ -1,6 +1,6 @@
 <form  method = 'post' action = "/mark_done">
-<input type ="text" name="items">
-<input type = "submit" value="complete">
+<input type ="number" name="items">
+<input type = "submit" value="number to be complete">
 
 </form>
 
