--- a/mysqltodo/views/show_databases.erb
+++ b/mysqltodo/views/show_databases.erb
@@ -7,6 +7,12 @@
 
  <a href='/show_tables?database=<%=database["Database"]%>'>show_tables</a> <br/>
 <% end %>
+<br />
+<br />
 
 </ol>
+<i> <b> <a href="/createdb">create new database</a> | <a href="/deletedb">delete a database</a> </b></i>
+<br/>
+
+<br/>
 <a href='/home'>click here to go back to home page</a>
